--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 </tr>
 </thead>
 <tbody>
+  <tr>
+   <td>2018-2021</td>
+   <td>Diploma in Systematic Theology</td>
+  </tr>
 <tr>
  <td>2018-2021</td>
  <td>Bachelor of Bible and Theology</td>
